# llama.cog

./: README_OPENCOG.md
.github/actions/opencog-setup/: action.yml
.github/workflows/: build.yml  opencog-build.yml  opencog-e2e.yml  opencog-lint.yml  opencog-release.yml  release.yml
cmake/: common.cmake
examples/: CMakeLists.txt
examples/opencog-cognitive/: CMakeLists.txt  cognitive.cpp
ggml/src/ggml-metal/: ggml-metal-device.h  ggml-metal-device.m  ggml-metal.metal
include/opencog/: atomspace.h  cognitive-cycle.h  cognitive_cycle.h  llm-inference.h  llm_inference.h  opencog.h
src/: CMakeLists.txt  llama-hparams.h  llama-model-loader.h  llama-sampling.cpp
src/opencog/: CMakeLists.txt  atomspace.cpp  cognitive-cycle.cpp  cognitive_cycle.cpp  llm-inference.cpp  llm_inference.cpp  opencog.cpp
tests/: .gitignore  CMakeLists.txt  test-backend-ops.cpp
tests/opencog/: CMakeLists.txt  e2e-cognitive.sh  test-atomspace.cpp  test-cognitive-cycle.cpp  test-cognitive-system.cpp  test-embodied-reasoning.cpp  test-prompt-engine.cpp
